# qt

./: CMakeLists.txt
src/: main_window.cpp  main_window.h  network_worker.cpp  network_worker.h
tests/: main_window_test.cpp
